# guitar-tuner

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32F767ZI_FLASH.ld  gcc-arm-none-eabi.cmake  launch.json  stm_serial.py  tasks.json  witch main
.cache/clangd/index/: FreeRTOS.h.888A9E8D6E4B3232.idx  FreeRTOSConfig.h.584E862DE653AB9B.idx  Global.h.62AC28A8F1B6C0BA.idx  IO_init.c.1D6556D645D62C2B.idx  IO_init.h.82F16BBB6B91D08C.idx  SEGGER.h.B836C81E179F0979.idx  SEGGER_RTT.c.60054A10CE2DC1B2.idx  SEGGER_RTT.h.04477832F825A8EA.idx  SEGGER_RTT_ASM_ARMv7M.S.6472B1975E89C6D1.idx  SEGGER_RTT_Conf.h.C7F74FF33752061F.idx  SEGGER_RTT_printf.c.4AC655B9E09E2543.idx  SEGGER_SYSVIEW.c.A669A32EAF0C4985.idx  SEGGER_SYSVIEW.h.875DD71FDEA0DE86.idx  SEGGER_SYSVIEW_Conf.h.E286BD2441721CC4.idx  SEGGER_SYSVIEW_ConfDefaults.h.727EFEECB550CB70.idx  SEGGER_SYSVIEW_Config_FreeRTOS.c.433FCF76DC235BFA.idx  SEGGER_SYSVIEW_FreeRTOS.c.024F89FE29FCEA96.idx  SEGGER_SYSVIEW_FreeRTOS.h.FE506F8FA1F3FC9D.idx  SEGGER_SYSVIEW_Int.h.05BFCB9BF88885B5.idx  cmsis_compiler.h.AF7B7105123E51E4.idx  cmsis_gcc.h.998F937B4CB28272.idx  cmsis_os2.c.B1855E104C15CC61.idx  cmsis_os2.h.3665D52EF7139757.idx  cmsis_version.h.33390F6CE0545E23.idx  core_cm7.h.F6573DB37B385142.idx  croutine.c.570141859BA5B535.idx  croutine.h.F7AEE36F6717D731.idx  deprecated_definitions.h.3C8F772D28EC2CC7.idx  event_groups.c.E32D4B8DD690058F.idx  event_groups.h.125C0EE044373FB1.idx  heap_4.c.9063E4457C9A755B.idx  list.c.72FAB2FE7617CC24.idx  list.h.E6EC60EA518CD9C1.idx  main.c.FED46C1B43CBF04E.idx  main.h.6E68E35A2D976019.idx  mpu_armv7.h.57165D6F87F26587.idx  mpu_wrappers.h.B2E3D842D2140F35.idx  port.c.7A8E6D625CA1941A.idx  portable.h.B17C9D8E37EFE4C3.idx  portmacro.h.BE79B4B9E2ECC227.idx  (+77 more)
Inc/: IO_init.h  desktop.ini  main.h  stm32f7xx_hal_conf.h
Src/: IO_init.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
